<resources>
    <string name="app_name">Event Go</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="gender">
        <item>Мужчина</item>
        <item>Женщина</item>
    </string-array>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="continue_register_facebook">Продолжить с Facebook</string>
    <string name="continue_register_google">Продолжить с Google</string>
    <string name="title_my_tickets">Мои билеты</string>
    <string name="title_profile">Профиль</string>
    <string name="title_qr">Dvizh QR</string>
    <string name="title_favorites">Favourites</string>
    <string name="title_search">Search</string>
    <string name="sign_in_with_password">Войти с паролем</string>
    <string name="do_not_have_account">Нет аккаунта?</string>
    <string name="sign_up">Зарегистрируйся</string>
    <string name="or">или</string>
    <string name="welcome_registration">Добро пожаловать!</string>
    <string name="log_in">Войти</string>
    <string name="log_in_phone_mail_edit">Телефон, имя пользователя или эл. а</string>
    <string name="password_login">Пароль</string>
    <string name="remember_me_login">Запомнить меня</string>
    <string name="qr" translatable="false">QR</string>
    <string name="politics">Нажимая кнопку Продолжить, <u>вы соглашаетесь с политикой конфеденциальности и правилами пользования.</u></string>
    <string name="choose_sex_type">Выберите пол</string>
    <string name="type_man">Мужчина</string>
    <string name="type_woman">Женщина</string>
    <string name="soon_home_page">Скоро</string>
    <string name="see_all_home_page">Все</string>
    <string name="interesting_now_home_page">Интересно сейчас</string>
    <string name="title_main">Главная</string>

    <string name="event_price_from">от %s ₸</string>
    <string name="free">Бесплатно</string>
</resources>